ISPN-15010 Make ProtocolManagementIT more robust